--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ here::here("data","2020","06","01","data.csv")
 
 This functionality is designed to work via an RStudio addin - simply highlight your file path, browse to the `herehelper` section in the RStudio Addins drop-down menu, and select "Format path for use with here::here()".
 
-Alternatively you can [bind the functionality to a keyboard shortcut](https://support.rstudio.com/hc/en-us/articles/206382178-Customizing-Keyboard-Shortcuts) - I personally like mapping it to `CRTL+/`.
+Alternatively you can [bind the functionality to a keyboard shortcut](https://support.rstudio.com/hc/en-us/articles/206382178-Customizing-Keyboard-Shortcuts) (I personally like mapping it to `CRTL+/`).
 
 ## Installation
 
@@ -48,4 +48,5 @@ library(herehelper)
 
 ## To Do
 
-Make a video demonstrating the functionality.
+* Better testing (not exactly sure how!).
+* Make a video demonstrating the functionality.
